--- a/inventory-service/src/main/resources/application.yaml
+++ b/inventory-service/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 server:
   port: 8082
 
+product-service:
+  base-url: http://localhost:8081
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/inventory_db
