--- a/inventory-service/src/main/resources/application.yaml
+++ b/inventory-service/src/main/resources/application.yaml
@@ -4,7 +4,28 @@ server:
 product-service:
   base-url: http://localhost:8081
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,env
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+  health:
+    db:
+      enabled: true
+    diskspace:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
 spring:
+  application:
+    name: inventory-service
   datasource:
     url: jdbc:postgresql://localhost:5432/inventory_db
     username: techuser
@@ -34,3 +55,12 @@ logging:
     org.hibernate.orm.deprecation: error
     org.springframework: warn
     com.jdvergara.techtest: info
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+info:
+  app:
+    name: Inventory Service
+    description: Microservicio de gestión de inventario
+    version: 1.0.0
+    port: 8082
