--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,47 @@
-version: "3.8"
+version: "3.9"
 
 services:
   mysql:
     image: mysql:8.0
     container_name: tech-mysql
+    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_DATABASE: product_db
       MYSQL_USER: techuser
       MYSQL_PASSWORD: techpass
     ports:
       - "3307:3306"
     volumes:
-      - mysqldata:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-    restart: unless-stopped
-    command: --default-authentication-plugin=mysql_native_password
+
+  product-service:
+    build: ./product-service
+    container_name: product-service
+    depends_on:
+      - mysql
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/product_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: techuser
+      SPRING_DATASOURCE_PASSWORD: techpass
+      APP_API_KEY: my-super-secret-key
+    ports:
+      - "8081:8081"
+
+  inventory-service:
+    build: ./inventory-service
+    container_name: inventory-service
+    depends_on:
+      - mysql
+      - product-service
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/inventory_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: techuser
+      SPRING_DATASOURCE_PASSWORD: techpass
+      PRODUCT_SERVICE_BASE_URL: http://product-service:8081
+    ports:
+      - "8082:8082"
 
 volumes:
-  mysqldata:
+  mysql-data:
